public/MOM/css/style.css
/* ... */
@font-face {
    font-family: 'LuloCleanOneBold';
    src: url('fonts/LuloCleanOneBold.eot');
    src: url('fonts/LuloCleanOneBold.eot') format('embedded-opentype'),
         url('fonts/LuloCleanOneBold.woff2') format('woff2'),
         url('fonts/LuloCleanOneBold.woff') format('woff'),
         url('fonts/LuloCleanOneBold.ttf') format('truetype'),
         url('fonts/LuloCleanOneBold.svg#LuloCleanOneBold') format('svg');
}
@font-face {
    font-family: 'LuloCleanOne';
    src: url('fonts/LuloCleanOne.eot');
    src: url('fonts/LuloCleanOne.eot') format('embedded-opentype'),
         url('fonts/LuloCleanOne.woff2') format('woff2'),
         url('fonts/LuloCleanOne.woff') format('woff'),
         url('fonts/LuloCleanOne.ttf') format('truetype'),
         url('fonts/LuloCleanOne.svg#LuloCleanOne') format('svg');
}
@font-face {
    font-family: 'ProximaNovaFont';
    src: url('fonts/ProximaNovaFont.eot');
    src: url('fonts/ProximaNovaFont.eot') format('embedded-opentype'),
         url('fonts/ProximaNovaFont.woff2') format('woff2'),
         url('fonts/ProximaNovaFont.woff') format('woff'),
         url('fonts/ProximaNovaFont.ttf') format('truetype'),
         url('fonts/ProximaNovaFont.svg#ProximaNovaFont') format('svg');
}

html,
body {
    height: 100%;
}

body {
    line-height: 1.74;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    visibility: visible;
    font-family: 'ProximaNovaFont';
    color: #000000;
    position: relative;
    background-color: #ffffff;
}

body.no-overflow {
    overflow: hidden;
}
hr {
    margin: 10px 0;
}
.font-nexa-bold {
    font-family: 'LuloCleanOneBold';
}

.font-nexa-light {
    font-family: 'LuloCleanOne';
}

.site-wrapper-reveal {
    background: #ffffff;
}

.bg-EDECE9 {
    background: #EDECE9;
}

.bg-FBFBFB {
    background: #FBFBFB;
}

.bg-fafafa {
    background: #FAFAFA;
}

.cfa-rem{
    border: 1px solid #660000;
    color: #660000;
    padding: 2px;
    border-radius: 5px;
    margin: 0px 1px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'LuloCleanOne';
    color: #111;
    margin-top: 0;
    margin-bottom: 0;
    line-height: 1.41;
    /* letter-spacing: -2px; */
    font-weight: bold;
}

h1 {
    font-size: 60px;
    line-height: 1.1;
}

.img-full {
    width: 100%;
    height: auto
}

@media only screen and (min-width: 992px) and (max-width: 1199px) {
    h1 {
        font-size: 46px;
    }
}

@media only screen and (min-width: 768px) and (max-width: 991px) {
    h1 {
        font-size: 40px;
    }
}

@media only screen and (max-width: 767px) {
    h1 {
        font-size: 34px;
    }
}

h2 {
    font-size: 36px;
}

@media only screen and (min-width: 768px) and (max-width: 991px) {
    h2 {
        font-size: 32px;
    }
}

@media only screen and (max-width: 767px) {
    h2 {
        font-size: 30px;
    }
}

h3 {
    font-size: 30px;
}

@media only screen and (min-width: 768px) and (max-width: 991px) {
    h3 {
        font-size: 28px;
    }
}

@media only screen and (max-width: 767px) {
    h3 {
        font-size: 25px;
    }
}

h4 {
    font-size: 26px;
}

@media only screen and (min-width: 992px) and (max-width: 1199px) {
    h4 {
        font-size: 24px;
    }
}

@media only screen and (min-width: 768px) and (max-width: 991px) {
    h4 {
        font-size: 22px;
    }
}

@media only screen and (max-width: 767px) {
    h4 {
        font-size: 22px;
    }
}

h5 {
    font-size: 24px;
}

@media only screen and (max-width: 767px) {
    h5 {
        font-size: 20px;
    }
}

h6 {
    font-size: 18px;
}
p{
    font-family: 'ProximaNovaFont';
}
p:last-child {
    margin-bottom: 0;
}

a,
button {
    color: inherit;
    display: inline-block;
    line-height: inherit;
    text-decoration: none;
    cursor: pointer;
}

a,
button,
img,
span {
    -webkit-transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
    -o-transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
    transition: all 0.4s cubic-bezier(0.645, 0.045, 0.355, 1);
}

*:focus {
    outline: none !important;
}

a:focus {
    color: inherit;
    outline: none;
    text-decoration: none;
}

.btn.focus,
.btn:focus {
    outline: none;
    -webkit-box-shadow: none;
    box-shadow: none;
}

a:hover {
    text-decoration: none;
    color: #660000;
}

button,
input[type="submit"] {
    cursor: pointer;
}

ul {
    list-style: outside none none;
    margin: 0;
    padding: 0;
}

.h-lg {
    font-size: 48px;
}

@media only screen and (min-width: 768px) and (max-width: 991px) {
    .h-lg {
        font-size: 40px;
    }
}

@media only screen and (max-width: 767px) {
    .h-lg {
        font-size: 34px;
    }
}

.font-lg-p {
    font-size: 18px;
}

.mark,
mark {
    padding: 0 0;
    background-color: transparent;
}

.font-weight--bold {
    font-weight: 700;
}

.font-weight--reguler {
    font-weight: 500;
}

.font-weight--normal {
    font-weight: 400;
}

.font-weight--light {
    font-weight: 300;
}


/*-- Default Class*/

.text-color-primary {
    color: #660000;
}

.text-color-secondary {
    color: #d2a98e;
}

.text-black {
    color: #111 !important;
}

.bg-white {
    background: #ffffff;
}

.bg-gray {
    background: #f4f5f7;
}

.bg-gray-2 {
    background: #F6FAFE;
}

.bg-gray-3 {
    background: #f6f2ed;
}

.bg-theme-default {
    background: #660000;
}

.theme-bg-secondary {
    background: #d2a98e;
}

.black-bg {
    background: #000000;
}

.border-radus-5 {
    border-radius: 5px;
}

.sub-heading {
    color: #999;
}

.text-red {
    color: red;
}

.text-green {
    color: #d2a98e;
}

.bg-gradient {
    background: -webkit-linear-gradient(top, #FFF 0, #F5F5F5 100%);
}


/*-- Tab Content & Pane Fix --*/

select {
    padding: 3px 20px;
    height: 56px;
    max-width: 100%;
    width: 100%;
    outline: none;
    border: 1px solid #f8f8f8;
    border-radius: 5px;
    background: #f8f8f8 url("../images/icons/selector-icon.png") no-repeat center right 20px;
    background-color: #f8f8f8;
    -moz-appearance: none;
    -webkit-appearance: none;
}
/* ... */

